WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60057
Unreachable URL is lost when canceling load of a new page
https://bugs.webkit.org/show_bug.cgi?id=60057
Summary
Unreachable URL is lost when canceling load of a new page
Jeff Miller
Reported
2011-05-03 13:39:50 PDT
In
bug 47938
<
http://trac.webkit.org/changeset/70097
>, we added support for tracking the unreachable URL in the UI process in WebFrameProxy. However, as soon as you start loading a new URL, any previous unreachable URL is lost. If you cancel loading the new page, the previous page is still shown, but it no longer has an unreachable URL.
Attachments
Patch
(2.81 KB, patch)
2011-05-03 13:50 PDT
,
Jeff Miller
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2011-05-03 13:40:14 PDT
<
rdar://problem/9049135
>
Jeff Miller
Comment 2
2011-05-03 13:50:15 PDT
Created
attachment 92121
[details]
Patch
Jeff Miller
Comment 3
2011-05-03 13:54:31 PDT
Committed
r85655
: <
http://trac.webkit.org/changeset/85655
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug